# sharded-slab

./: .clog.toml  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  IMPLEMENTATION.md  README.md  build.rs  slab bench.md
.github/workflows/: ci.yml  release.yml
benches/: bench.rs  opt.rs  pool.rs  slab.rs  support.rs
src/: cfg.rs  clear.rs  global.rs  iter.rs  lib.rs  macros.rs  page.rs  pool.rs  pool_tests.rs  shard.rs  sync.rs  tests.rs  tid.rs
src/page/: global.rs  mod.rs  slot.rs  stack.rs
src/pool/: mod.rs  tests.rs
src/tests/: custom_config.rs  loom_pool.rs  loom_slab.rs  mod.rs
tests/: tests.rs
