[package]
name = "mislab"
version = "0.1.0"
authors = ["hawkw <eliza@buoyant.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"

[dev-dependencies]
loom = "0.2"
proptest = "0.9.4"

[patch.crates-io]
loom = { git = "https://github.com/hawkw/loom", branch = "eliza/thread-local" }
